Issue #20530: The signatures for slot builtins have been updated to reflect the fact that they only accept positional-only arguments.